updates to pgsql, neo4j, riak

--- a/presentation/templates/neo4j.html
+++ b/presentation/templates/neo4j.html
@@ -1,8 +1,8 @@
 <div id="neo4j" data-title="Neo4j" data-lang="neo4j" data-timer="true" class="step slide">
     <q>
         <p>
-            <br>
-            <img src="/images/neo4j.png" alt="Neo4j" width="300">
+            <br><br>
+            <img src="/images/neo4j.jpg" alt="Neo4j" width="300">
         </p>
     </q>
 </div>
@@ -21,7 +21,8 @@
 
 <div id="neo4j-quote" data-title="Graph Theory" data-lang="neo4j" data-timer="true" class="step slide">
     <q>"In many cases, if you can formulate what you're working on as a graph problem, you're (at least) halfway to a solution."
-        <br> - Magnus Lie Hetland
+        <br><br> - Magnus Lie Hetland<br>
+        <small style="font-size: .4em;">Source: Python Algorithms: Mastering Basic Algorithms in the Python Language</small>
     </q>
 </div>
 
@@ -29,14 +30,24 @@
     <q>
         <ul>
             <li>Released February 2010</li>
-            <li>Rod Johnson on Board of Directors</li>
+            <li>Rod Johnson (of Spring fame) on Board of Directors</li>
+        </ul>
+    </q>
+</div>
+
+<div id="neo4j-versions" data-title="Versions" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <ul>
+            <li>Enterprise</li>
+            <li>Community</li>
+            <li>Embedded</li>
         </ul>
     </q>
 </div>
 
 <div id="neo4j-setup" data-title="Setup" data-lang="neo4j" data-timer="true" class="step slide">
     <q>
-        Community Edition (embedded, use Maven)
+        Community Edition:
         <ul>
             <li>Linux (Debian based):<br> <code>apt-get install neo4j</code></li>
             <li>OSX: <code>brew install neo4j</code></li>
@@ -51,14 +62,14 @@
             <li>Java code</li>
             <li>REST</li>
             <li>Cypher (more SQL-like)</li>
-            <li>Ruby console</li>
             <li>Gremlin</li>
         </ul>
     </q>
 </div>
 
 <div id="neo4j-rest" data-title="REST" data-lang="neo4j" data-timer="true" class="step slide">
-    <q></q>
+    <q><code style="word-wrap: break-word;">$curl http://localhost:7474/db/data/node/18957/properties/name
+        <br>"Brad Pitt"</code></q>
 </div>
 
 <div id="neo4j-gremlin" data-title="Gremlin" data-lang="neo4j" data-timer="true" class="step slide">
@@ -67,7 +78,7 @@
 
 <div id="neo4j-example" data-title="Example" data-lang="neo4j" data-timer="true" class="step slide">
     <q>
-        <p>Kevin Bacon algorithm</p>
+        <p>Degrees to Kevin Bacon</p>
     </q>
 </div>
 
