--- a/presentation/templates/postgres.html
+++ b/presentation/templates/postgres.html
@@ -46,7 +46,7 @@
         <ul>
             <li>18 procedural languages (PL/V8)</li>
             <li>XML data type (XPath queries)</li>
-            <li>hstore - key/value pairs</li>
+            <li>hstore - key/value store</li>
         </ul>
 
     </q>
@@ -89,7 +89,7 @@
     <q>
         SQL Database-as-a-Service
         <ul>
-            <li>Dataclips</li>
+            <li><a href="https://postgres.heroku.com/dataclips/pgdlgfiyquirmyiugaexwkhcmfnu">Dataclips</a></li>
             <li>Fork</li>
             <li>Follow</li>
             <li>Connect from anywhere</li>
