--- a/presentation/templates/riak.html
+++ b/presentation/templates/riak.html
@@ -1,3 +1,87 @@
 <div id="riak" data-title="Riak" data-timer="true" data-lang="riak" class="step slide">
-    <q></q>
+    <q>
+        <p>
+            <br>
+            <img src="/images/riak.jpg" alt="Riak" width="300">
+        </p>
+    </q>
+</div>
+
+<div id="riak-basic" data-title="Introduction" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>Key/Value store</li>
+            <li>Initial release 2009</li>
+            <li>Current version 1.2 (released Aug 7, 2012)</li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-history" data-title="History" data-timer="true" data-lang="riak" class="step slide">
+    <q>Implementation of Amazon's DynamoDB, a highly available key-value structured storage system.</q>
+</div>
+
+<div id="riak-setup" data-title="Setup" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>Linux:<br> <code>wget</code> from Basho.com</li>
+            <li>OSX: <code>brew install riak</code></li>
+            <li>Windows: ?</li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-talking" data-title="Talking to Riak" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>HTTP REST (development)</li>
+            <li>Protocol Buffer (production)</li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-consistency" data-title="Eventual Consistency" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>Last write is the winner (default)</li>
+            <li>Uses 'vector clocks' to determine last write</li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-buckets" data-title="Buckets" data-timer="true" data-lang="riak" class="step slide">
+    <q>Logical unit that allows setting of configuration properties (data distribution, quorum, etc.)</q>
+</div>
+
+<div id="riak-map-reduce" data-title="MapReduce" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        Available in two languages
+        <ul>
+            <li>JavaScript</li>
+            <li>Erlang</li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-search" data-title="Search" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>Full-text search add-on</li>
+            <li>Inspired by Apache Lucene</li>
+            <li>On CLI: <code>search-cmd</code></li>
+        </ul>
+    </q>
+</div>
+
+<div id="riak-example" data-title="Example" data-timer="true" data-lang="riak" class="step slide">
+    <q><p>Demo</p></q>
+</div>
+
+<div id="riak-book" data-title="Book" data-timer="true" data-lang="riak" class="step slide">
+    <q>
+        <ul>
+            <li>Riak Handbook</li>
+            <li>http://wiki.basho.com</li>
+        </ul>
+    </q>
 </div>
